@@ -11,8 +11,9 @@ gem2deb (0.1.1) experimental; urgency=low
   * gem2tgz gemname now downloads the gem if needed.
   * Generate a better debian/copyright template.
   * Support DEB_BUILD_OPTIONS=nocheck.
+  * Put everything in the same binary package.
 
- -- Lucas Nussbaum <lucas@lucas-nussbaum.net>  Tue, 22 Mar 2011 19:01:47 +0100
+ -- Lucas Nussbaum <lucas@lucas-nussbaum.net>  Wed, 23 Mar 2011 16:06:45 +0100
 
 gem2deb (0.1.0) experimental; urgency=low
 
